<resources>
    <string name="app_name">CyclePower</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bicycle_weight">Bicycle weight [kg]</string>
    <string name="your_weight">Your weight [kg]</string>
    <string name="wheel_perimeter">Wheel perimeter [mm]4</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="start_workout">Start workout</string>
    <string name="session_started">Session started</string>
    <string name="session_ended">Session ended</string>
    <string name="stop_workout">Stop workout</string>
    <string name="workout_started">Workout started</string>
    <string name="workout_stopped">Workout stopped</string>
    <string name="session_on">Workout session in progress.</string>
    <string name="connection_suspended">Connection to Google APIs suspended</string>
    <string name="connection_failed">Connection to Google APIs failed</string>
    <string name="reconnected">Reconnected to Google APIs</string>
    <string name="no_connection">Couldn\'t connect to Google APIs</string>
    <string name="last_location_is_null">Google APIs last location is null</string>
    <string name="elapsed_time">Elapsed time</string>
    <string name="speed">Speed</string>
    <string name="cadence">Cadence</string>
    <string name="distance">Distance</string>
    <string name="gear_ratio">Gear ratio</string>
    <string name="acceleration">Acceleration</string>
    <string name="power">Power</string>
    <string name="torque">Torque</string>
    <string name="work">Work</string>
    <string name="steepness">Steepness</string>
    <string name="elevation">Elevation</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="errors">Errors</string>
    <string name="browse_workouts">Browse workouts</string>
    <string name="stop_workout_in_progress">A workout is in progress. Stop it to proceed.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="session_on_quit">Do you really want to finish the ongoing session?</string>
    <string name="title_workout_list">Workouts</string>
    <string name="title_workout_detail">Workout Detail</string>
    <string name="title_activity_workouts_overview">WorkoutsOverviewActivity</string>
    <string name="title_activity_workout_detail">WorkoutDetailActivity</string>
    <string name="kilometre">km</string>
    <string name="joule">J</string>
    <string name="workout_database_in_use">Workout database currently in use</string>
    <string name="error_getting_workouts">Error getting workouts</string>
    <string name="error_accessing_database">Error accessing database</string>
    <string name="dummy">Dummy</string>
    <string name="title_activity_appoint_path">AppointPathActivity</string>
    <string name="appoint_path">Appoint path</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="path_find_error">Error finding path. Try again.</string>
    <string name="path_no_directions">No available paths found. Try again.</string>
    <string name="arrow_back"><![CDATA[<]]></string>
    <string name="arrow_forward"><![CDATA[>]]></string>
    <string name="path_done">Select path</string>
    <string name="no_path_selected">No path selected</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="ok">OK</string>
    <string-array name="path_actions_array">
        <item>Find paths to here</item>
    </string-array>
    <string-array name="main_map_actions_array_no_path">
        <item>Appoint desired path</item>
    </string-array>
    <string-array name="main_map_actions_array_path_ok">
        <item>Clear path</item>
    </string-array>
    <string name="title_activity_debug_db">DebugDbActivity</string>



</resources>
