<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <hu.balygaby.projects.cyclepower.overdefines.CustomEditTextPreference
        android:hint="@string/bicycle_weight"
        android:defaultValue="8.0"
        android:key="bicycle_weight"
        android:title="@string/bicycle_weight"
        android:inputType="numberDecimal"
        android:singleLine="true"
        />
    <hu.balygaby.projects.cyclepower.overdefines.CustomEditTextPreference
        android:hint="@string/your_weight"
        android:defaultValue="70.0"
        android:key="your_weight"
        android:title="@string/your_weight"
        android:inputType="numberDecimal"
        android:singleLine="true"
        />
    <hu.balygaby.projects.cyclepower.overdefines.CustomEditTextPreference
        android:hint="@string/wheel_perimeter"
        android:defaultValue="2133"
        android:key="wheel_perimeter"
        android:title="@string/wheel_perimeter"
        android:inputType="number"
        android:singleLine="true"
        />
</PreferenceScreen>